# trackActivity

./: .gitignore  README.md  deploy.sh  render.yaml
.githooks/: post-merge
.github/workflows/: keep-alive.yml
dashboard/: .dockerignore  .env.example  Dockerfile  README.md  composer.json  package-lock.json  package.json  phpunit.xml  start.sh  tailwind.config.js
dashboard/bootstrap/: app.php
dashboard/config/: app.php  database.php  github.php  team.php  tracker.php
dashboard/docs/: 26-code-kanban-integration.md  27-api-rest.md  (+1 more)
desktop/: README.md  rebuild.sh
docs/: 01-overview.md  02-architecture.md  03-installation.md  04-configuration.md  05-database-schema.md  06-python-daemon.md  07-laravel-dashboard.md  08-activity-signals.md  09-context-scoring.md  10-time-blocks.md  11-summary-generation.md  12-export-system.md  13-development-guide.md  14-mvp-roadmap.md  15-kanban-plan.md  16-notes-plan.md  17-github-projects-sync.md  USER-GUIDE.md  crm-base44-api-contract.md  desktop-app-spike.md
infra/: .env.team.example  Caddyfile  deploy.sh  docker-compose.yml
scripts/: setup-hooks.sh
tracker/: .gitignore  README.md  config.example.yml  pyproject.toml  requirements.txt
tracker/scripts/: trackactivity.service
tracker/src/tracker/: buffer.py  cli.py  config.py  logging_setup.py  models.py  scheduler.py  storage.py
tracker/src/tracker/collectors/: base.py  git.py  idle.py  window.py
tracker/src/tracker/utils/: git_utils.py  paths.py  title_parsers.py  x11.py
tracker/tests/: test_buffer.py  test_git_collector.py  test_title_parsers.py
(+356 files in other folders)
