[project]
name = "trackactivity-tracker"
version = "0.1.0"
description = "Background activity tracker daemon for trackActivity"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "typer~=0.12",
    "pydantic~=2.7",
    "pydantic-settings~=2.3",
    "APScheduler~=3.10",
    "pyyaml~=6.0",
    "pygit2~=1.15",
    "python-xlib~=0.33",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.2",
    "pytest-mock~=3.14",
    "pytest-cov~=5.0",
    "ruff~=0.5",
    "black~=24.4",
    "mypy~=1.10",
]

[project.scripts]
tracker = "tracker.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by black

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
